--- a/Slutprojekt/Slutprojekt/Slutprojekt.csproj
+++ b/Slutprojekt/Slutprojekt/Slutprojekt.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Seller.cs" />
+    <Compile Include="shopItem.cs" />
+    <Compile Include="Stock.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
